# POS-Semestralka

./: .gitignore  CMakeLists.txt  Dokumentacia.docx  Makefile  colors.h  maxLimits.h
Client/: main.c  operations.c  operations.h
Server/: main.c  temp.c  users.c  users.h
